results/cppcheck_process.txt
src/new_publisher.cpp:29:1: error: The one definition rule is violated, different classes/structs have the same name 'MinimalPublisher' [ctuOneDefinitionRuleViolation]
class MinimalPublisher : public rclcpp::Node {
^
src/publisher_member_function.cpp:27:1: note: The one definition rule is violated, different classes/structs have the same name 'MinimalPublisher'
class MinimalPublisher : public rclcpp::Node {
^
src/new_publisher.cpp:29:1: note: The one definition rule is violated, different classes/structs have the same name 'MinimalPublisher'
class MinimalPublisher : public rclcpp::Node {
^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingInclude]

